out
matrix-test.c: In function 'matrix_construct_identity_test':
matrix-test.c:60:2: error: expected ',' or ';' before 'A'
   60 |  A = matrix_construct(elements, 3, 3);
      |  ^
matrix-test.c:53:8: error: unused variable 'elements' [-Werror=unused-variable]
   53 |  float elements[] =
      |        ^~~~~~~~
matrix-test.c: In function 'matrix_test_all':
matrix-test.c:258:2: error: implicit declaration of function 'matrix_contruct_identity_test'; did you mean 'matrix_construct_identity_test'? [-Werror=implicit-function-declaration]
  258 |  matrix_contruct_identity_test();
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |  matrix_construct_identity_test
At top level:
matrix-test.c:48:1: error: 'matrix_construct_identity_test' defined but not used [-Werror=unused-function]
   48 | matrix_construct_identity_test()
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
matrix.c: In function 'matrix_construct_identity':
matrix.c:39:46: error: expected ';' before '}' token
   39 |   matrix.elements[i] = (i / rows == i % rows)
      |                                              ^
      |                                              ;
   40 |  }
      |  ~                                            
